# ClearTrace

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
src/clear_trace/: __init__.py  _types.py  assertions.py  cassette.py  cli.py  diff.py  pytest_plugin.py  recorder.py  replayer.py
src/clear_trace/explain/: __init__.py
src/clear_trace/explain/advisor/: __init__.py  advisor.py  matrix_report.py  suggestions.py  tool_advisor.py  tool_matrix_report.py  tool_types.py
src/clear_trace/explain/concepts/: __init__.py  extractor.py  mapper.py
src/clear_trace/explain/core/: __init__.py  base.py  types.py  utils.py
src/clear_trace/explain/counterfactual/: __init__.py  analyzer.py  generator.py
src/clear_trace/explain/perturbation/: __init__.py  prompt_lime.py  sentence_importance.py  token_importance.py
src/clear_trace/explain/reasoning/: __init__.py  engine.py
src/clear_trace/explain/trajectory/: __init__.py  attribution.py  bridge.py
src/clear_trace/explain/visualization/: __init__.py  console.py  html_report.py  matrix_plots.py  word_report.py
src/clear_trace/export/: __init__.py  finetune.py
src/clear_trace/interceptors/: crewai.py  langchain.py  langgraph.py
src/clear_trace/mcp/: __init__.py  diff.py  interceptor.py
src/clear_trace/rag/: __init__.py  assertions.py  context_analysis.py  diff.py  export.py  scorers.py  snapshot.py
src/clear_trace/rag/interceptors/: __init__.py  chromadb_interceptor.py  embedding_interceptor.py  langchain_retriever.py  llamaindex_retriever.py  pinecone_interceptor.py  qdrant_interceptor.py
src/clear_trace/reporters/: cost_dashboard.py  html.py  terminal.py
src/clear_trace/semantic/: __init__.py  assertions.py  similarity.py
